--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="root" class="p-4"></div>
 
   <script type="text/babel">
-    const API_KEY = 'YOUR_API_KEY'; // Replace with your Google Places API key
+    const API_KEY = AIzaSyBlIOLa6mBFKVjrSGoWCLBMmifmxm-ITLA; // Replace with your Google Places API key
 
     function App() {
       const [location, setLocation] = React.useState(null);
