--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <div id="root" class="p-4"></div>
 
   <script type="text/babel">
+        if (API_KEY === 'YOUR_API_KEY') {
+          setError('Please update index.html with your Google Places API key.');
+          return;
+        }
     const API_KEY = AIzaSyBlIOLa6mBFKVjrSGoWCLBMmifmxm-ITLA; // Replace with your Google Places API key
 
     function App() {
