Set Google Places API key

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="root" class="p-4"></div>
 
   <script type="text/babel">
-        if (API_KEY === 'YOUR_API_KEY') {
+    const API_KEY = 'AIzaSyBlIOLa6mBFKVjrSGoWCLBMmifmxm-ITLA';
           setError('Please update index.html with your Google Places API key.');
           return;
         }
